{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 16,
  "lineage": "c3687e5d-fe5f-ce6f-4fca-9bebb5ed4141",
  "resources": [
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b854314b53b75621",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-191-74.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.191.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip"
            },
            "tags_all": {
              "Name": "nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db2c90670e63c538",
            "arn": "arn:aws:ec2:ap-south-1:184101835166:instance/i-068977103f1bb7c20",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068977103f1bb7c20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b5bd0913cb338d5",
            "private_dns": "ip-10-0-0-115.ap-south-1.compute.internal",
            "private_ip": "10.0.0.115",
            "public_ip": "3.108.67.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d25eb5cce4dfecdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e13e978db34a8440",
            "tags": {
              "Name": "apache_web_server"
            },
            "tags_all": {
              "Name": "apache_web_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a32bd1e5d6f63da"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.web_secgroup",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8709a9f973278ce",
            "arn": "arn:aws:ec2:ap-south-1:184101835166:instance/i-0bb1f957f1888b2b6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb1f957f1888b2b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04abad5163e8890d0",
            "private_dns": "ip-10-0-1-71.ap-south-1.compute.internal",
            "private_ip": "10.0.1.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-001e2eeb509427f36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2b32c090b14b8cf",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0723839df90cce980"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.jenkins_secgroup",
            "module.ec2_private.aws_subnet.jenkins_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a62bf22e41143a4",
            "arn": "arn:aws:ec2:ap-south-1:184101835166:instance/i-0847acffe26a552e6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0847acffe26a552e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c749b8e2f7fd9066",
            "private_dns": "ip-10-0-0-106.ap-south-1.compute.internal",
            "private_ip": "10.0.0.106",
            "public_ip": "13.233.166.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b34ccf67b0793851",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e13e978db34a8440",
            "tags": {
              "Name": "windows_server"
            },
            "tags_all": {
              "Name": "windows_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a32bd1e5d6f63da"
            ]
          },
          "dependencies": [
            "module.ec2_private.aws_security_group.web_secgroup",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:internet-gateway/igw-06e62ed3e2681ff00",
            "id": "igw-06e62ed3e2681ff00",
            "owner_id": "184101835166",
            "tags": {
              "Name": "web_igw"
            },
            "tags_all": {
              "Name": "web_igw"
            },
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jenkins_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b854314b53b75621",
            "connectivity_type": "public",
            "id": "nat-0e905652d8154bd33",
            "network_interface_id": "eni-0596cac46cdc4d206",
            "private_ip": "10.0.0.156",
            "public_ip": "65.1.191.74",
            "subnet_id": "subnet-0e13e978db34a8440",
            "tags": {
              "Name": "jenkins_nat"
            },
            "tags_all": {
              "Name": "jenkins_nat"
            }
          },
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:route-table/rtb-0a9c66627ccf54f95",
            "id": "rtb-0a9c66627ccf54f95",
            "owner_id": "184101835166",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e905652d8154bd33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins_rt"
            },
            "tags_all": {
              "Name": "jenkins_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_nat_gateway.jenkins_nat",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:route-table/rtb-051bba714107e0bf2",
            "id": "rtb-051bba714107e0bf2",
            "owner_id": "184101835166",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e62ed3e2681ff00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_internet_gateway.web_igw",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d88a48def18c7ea",
            "route_table_id": "rtb-051bba714107e0bf2",
            "subnet_id": "subnet-0e13e978db34a8440"
          },
          "dependencies": [
            "module.ec2_private.aws_internet_gateway.web_igw",
            "module.ec2_private.aws_route_table.web_rt",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003eef5b280ed2e47",
            "route_table_id": "rtb-0a9c66627ccf54f95",
            "subnet_id": "subnet-0a2b32c090b14b8cf"
          },
          "dependencies": [
            "module.ec2_private.aws_eip.eip_nat_gateway",
            "module.ec2_private.aws_nat_gateway.jenkins_nat",
            "module.ec2_private.aws_route_table.jenkins_rt",
            "module.ec2_private.aws_subnet.jenkins_subnet",
            "module.ec2_private.aws_subnet.web_subnet",
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:security-group/sg-0723839df90cce980",
            "description": "private_host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0723839df90cce980",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_sec_grp",
            "name_prefix": "",
            "owner_id": "184101835166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sec_group"
            },
            "tags_all": {
              "Name": "jenkins_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:security-group/sg-03a32bd1e5d6f63da",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a32bd1e5d6f63da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "184101835166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_sec_group"
            },
            "tags_all": {
              "Name": "web_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:subnet/subnet-0a2b32c090b14b8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a2b32c090b14b8cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184101835166",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:subnet/subnet-0e13e978db34a8440",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0e13e978db34a8440",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "184101835166",
            "tags": {
              "Name": "web_subnet"
            },
            "tags_all": {
              "Name": "web_subnet"
            },
            "vpc_id": "vpc-0627728ce3044635c"
          },
          "dependencies": [
            "module.ec2_private.aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:184101835166:vpc/vpc-0627728ce3044635c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00e4e5bed07b95ccd",
            "default_route_table_id": "rtb-0dad8cbd2f730a8af",
            "default_security_group_id": "sg-058e976dd2c7568df",
            "dhcp_options_id": "dopt-acf65bc7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0627728ce3044635c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dad8cbd2f730a8af",
            "owner_id": "184101835166",
            "tags": {
              "Name": "web_vpc"
            },
            "tags_all": {
              "Name": "web_vpc"
            }
          }
        }
      ]
    }
  ]
}